--- a/fse1-fidzulu/src/styles.css
+++ b/fse1-fidzulu/src/styles.css
@@ -182,3 +182,6 @@ button.classB.reverseFill:active {
   background: #d1aa6d;
   border: #c18e3d solid 2px;
 } */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
