Remaining product display pages

--- a/fse1-fidzulu/src/app/app.component.html
+++ b/fse1-fidzulu/src/app/app.component.html
@@ -17,15 +17,15 @@
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" routerLink="/bikes">Bikes</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Books</a></li>
+              <li><a class="dropdown-item" routerLink="/books">Books</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">DVDs</a></li>
+              <li><a class="dropdown-item" routerLink="/dvd">DVDs</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Food</a></li>
+              <li><a class="dropdown-item" routerLink="/foods">Food</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Laptops</a></li>
+              <li><a class="dropdown-item" routerLink="/laptops">Laptops</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Toys</a></li>
+              <li><a class="dropdown-item" routerLink="/toys">Toys</a></li>
 
             </ul>
           </li>
