--- a/fse1-fidzulu/src/styles.css
+++ b/fse1-fidzulu/src/styles.css
@@ -184,4 +184,6 @@ button.classB.reverseFill:active {
 } */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+/* body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
+body { margin: 0; }
+
