added page-title to every category

--- a/fse1-fidzulu/src/app/app.component.html
+++ b/fse1-fidzulu/src/app/app.component.html
@@ -45,6 +45,53 @@
     </div>
   </nav>
   <router-outlet></router-outlet>
+  <div class="footer pt-5">
+    <!-- Footer -->
+    <footer class="text-center text-lg-start bg-dark text-light text-muted pt-5">
+      <section class="">
+        <div class="container text-center text-md-start">
+          <div class="row text-light text-decoration-none">
+            <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+              <h6 class="fs-3 fw-bold mb-4">
+                FidZulu
+              </h6>
+              <p>
+                Selling only the best things online
+              </p>
+            </div>
+
+            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+              <h6 class="text-uppercase fw-bold mb-4">
+                FrontEnd Team
+              </h6>
+              <p>Akilandeshwari R</p>
+              <p>Pavithra B</p>
+              <p>Rakshitha M</p>
+              <p>Sasmithaa V S</p>
+              <p>Sushmitha B R</p>
+            </div>
+
+            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+              <h6 class="text-uppercase fw-bold mb-4">
+                Midtier team
+              </h6>
+
+            </div>
+
+            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+              <h6 class="text-uppercase fw-bold mb-4">Backend Team</h6>
+              <p></p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="text-center text-light p-4">
+        <hr>
+        © 2022 Copyright:
+        <a class="text-reset text-decoration-none fw-bold" href="#">Fidelity FSE1-FidZulu</a>
+      </div>
+    </footer>
+  </div>
 </main>
 
 
