--- a/fse1-fidzulu/src/app/main-page/main-page.component.html
+++ b/fse1-fidzulu/src/app/main-page/main-page.component.html
@@ -15,7 +15,7 @@
             <div class="carousel-caption top-0 mt-4">
               <p class="mt-5 fs-3 text-uppercase">Enjoy your Freedom on two wheels</p>
               <h1 class="display-1 fw-bolder text-capitalize">Bikes</h1>
-              <button class="btn btn-primary px-4 py-2 fs-5 mt-5">Visit bike store</button>
+              <button class="btn btn-primary px-4 py-2 fs-5 mt-5"><a href="" class="text-decoration-none text-light" routerLink="/bikes">Visit bike store</a></button>
             </div>
           </div>
           <div class="carousel-item c-item">
@@ -24,7 +24,7 @@
               <p class="text-uppercase fs-3 mt-5">Giving your Hunger a new Option</p>
               <p class="display-1 fw-bolder text-capitalize">Food</p>
               <button class="btn btn-primary px-4 py-2 fs-5 mt-5" data-bs-toggle="modal"
-                data-bs-target="#booking-modal">Visit food store</button>
+                data-bs-target="#booking-modal"><a href="" class="text-decoration-none text-light" routerLink="/foods">Visit food store</a></button>
             </div>
           </div>
           <div class="carousel-item c-item">
@@ -33,7 +33,7 @@
               <p class="text-uppercase fs-3 mt-5">Inspiration for every age</p>
               <p class="display-1 fw-bolder text-capitalize">Books</p>
               <button class="btn btn-primary px-4 py-2 fs-5 mt-5" data-bs-toggle="modal"
-                data-bs-target="#booking-modal">Visit book store</button>
+                data-bs-target="#booking-modal"><a href="" class="text-decoration-none text-light" routerLink="/books">Visit book store</a></button>
             </div>
           </div>
           <div class="carousel-item c-item">
@@ -42,7 +42,7 @@
               <p class="text-uppercase fs-3 mt-5">Your Toy, Your Passion. Pick the best!</p>
               <p class="display-1 fw-bolder text-capitalize">Toys</p>
               <button class="btn btn-primary px-4 py-2 fs-5 mt-5" data-bs-toggle="modal"
-                data-bs-target="#booking-modal">Visit toy store</button>
+                data-bs-target="#booking-modal"><a href="" class="text-decoration-none text-light" routerLink="/toys">Visit toy store</a></button>
             </div>
           </div>
           <div class="carousel-item c-item">
@@ -51,7 +51,7 @@
               <p class="text-uppercase fs-3 mt-5">Designed with precision. Loaded with features. Made affordable for you</p>
               <p class="display-1 fw-bolder text-capitalize">Laptops</p>
               <button class="btn btn-primary px-4 py-2 fs-5 mt-5" data-bs-toggle="modal"
-                data-bs-target="#booking-modal">Visit laptop store</button>
+                data-bs-target="#booking-modal"><a href="" class="text-decoration-none text-light" routerLink="/laptops">Visit laptop store</a></button>
             </div>
           </div>
           <div class="carousel-item c-item">
@@ -60,7 +60,7 @@
               <p class="text-uppercase fs-3 mt-5">Rewind the happiness</p>
               <p class="display-1 fw-bolder text-capitalize">DVDs</p>
               <button class="btn btn-primary px-4 py-2 fs-5 mt-5" data-bs-toggle="modal"
-                data-bs-target="#booking-modal">Visit DVD store</button>
+                data-bs-target="#booking-modal"><a href="" class="text-decoration-none text-light" routerLink="/dvd">Visit DVD store</a></button>
             </div>
           </div>
         </div>
@@ -73,7 +73,7 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-      <div class="px-sm-5 py-5 container-fluid">
+      <div class="px-sm-5 pt-5 container-fluid">
         <div class="px-5">
           <div class="fs-1 mb-4">Categories</div>
           <div class="row">
@@ -138,52 +138,5 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="footer">
-        <!-- Footer -->
-        <footer class="text-center text-lg-start bg-dark text-light text-muted pt-5">
-          <section class="">
-            <div class="container text-center text-md-start">
-              <div class="row text-light text-decoration-none">
-                <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                  <h6 class="fs-3 fw-bold mb-4">
-                    FidZulu
-                  </h6>
-                  <p>
-                    Selling only the best things online
-                  </p>
-                </div>
-    
-                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                  <h6 class="text-uppercase fw-bold mb-4">
-                    FrontEnd Team
-                  </h6>
-                  <p>Akilandeshwari R</p>
-                  <p>Pavithra B</p>
-                  <p>Rakshitha M</p>
-                  <p>Sasmithaa V S</p>
-                  <p>Sushmitha B R</p>
-                </div>
-    
-                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                  <h6 class="text-uppercase fw-bold mb-4">
-                    Midtier team
-                  </h6>
-    
-                </div>
-    
-                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-                  <h6 class="text-uppercase fw-bold mb-4">Backend Team</h6>
-                  <p></p>
-                </div>
-              </div>
-            </div>
-          </section>
-          <div class="text-center text-light p-4">
-            <hr>
-            © 2022 Copyright:
-            <a class="text-reset text-decoration-none fw-bold" href="#">Fidelity FSE1-FidZulu</a>
-          </div>
-        </footer>
       </div>
 </main>
