--- a/fse1-fidzulu/src/app/productDisplay/books-display/books-display.component.html
+++ b/fse1-fidzulu/src/app/productDisplay/books-display/books-display.component.html
@@ -1,3 +1,6 @@
+<div class="py-5 fs-2 text-center">
+  <div class="pt-5">Books</div>
+</div>
 <div class="content"  >
   <mat-card  class="cards" *ngFor="let book of books" >
     <mat-card-title class="title" style="font-size: 20px;">{{book.Title}}</mat-card-title>
