--- a/fse1-fidzulu/src/app/productDisplay/dvd-display/dvd-display.component.html
+++ b/fse1-fidzulu/src/app/productDisplay/dvd-display/dvd-display.component.html
@@ -1,3 +1,6 @@
+<div class="py-5 fs-2 text-center">
+  <div class="pt-5">DVDs</div>
+</div>
 <div class="content"  >
   <mat-card  class="cards" *ngFor="let dvd of dvds" >
     <mat-card-title class="title" style="font-size: 20px;">{{dvd.title}}</mat-card-title>
