--- a/fse1-fidzulu/src/app/productDisplay/laptop-display/laptop-display.component.html
+++ b/fse1-fidzulu/src/app/productDisplay/laptop-display/laptop-display.component.html
@@ -1,3 +1,6 @@
+<div class="py-5 fs-2 text-center">
+  <div class="pt-5">Laptops</div>
+</div>
 <div class="content"  >
   <mat-card  class="cards" *ngFor="let laptop of laptops" >
     <mat-card-title class="title" style="font-size: 20px;">{{laptop.product}}</mat-card-title>
