--- a/fse1-fidzulu/src/app/productDisplay/food-display/food-display.component.html
+++ b/fse1-fidzulu/src/app/productDisplay/food-display/food-display.component.html
@@ -1,3 +1,6 @@
+<div class="py-5 fs-2 text-center">
+  <div class="pt-5">Food</div>
+</div>
 <div class="content"  >
   <mat-card  class="cards" *ngFor="let food of foods" >
     <mat-card-title class="title" style="font-size: 20px;">{{food.name}}</mat-card-title>
