--- a/fse1-fidzulu/src/app/productDisplay/toy-display/toy-display.component.html
+++ b/fse1-fidzulu/src/app/productDisplay/toy-display/toy-display.component.html
@@ -1,3 +1,6 @@
+<div class="py-5 fs-2 text-center">
+  <div class="pt-5">Toys</div>
+</div>
 <div class="content"  >
   <mat-card  class="cards" *ngFor="let toy of toys" >
     <mat-card-title class="title" style="font-size: 20px;">{{toy.name}}</mat-card-title>
