--- a/fse1-fidzulu/src/app/app.component.html
+++ b/fse1-fidzulu/src/app/app.component.html
@@ -33,11 +33,11 @@
 
         <form class="d-flex" role="radio">
           <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1" checked>
+            <input class="form-check-input" #radioVal1 type="radio" name="inlineRadioOptions" id="inlineRadio1" value="Raleigh" checked (click)="getVal(radioVal1.value)">
             <label class="form-check-label text-light" for="inlineRadio1">Raleigh</label>
           </div>
           <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+            <input class="form-check-input" #radioVal2 type="radio" name="inlineRadioOptions" id="inlineRadio2" value="Durham" (click)="getVal(radioVal2.value)">
             <label class="form-check-label text-light" for="inlineRadio2">Durham</label>
           </div>
         </form>
