--- a/fse1-fidzulu/src/app/app.component.html
+++ b/fse1-fidzulu/src/app/app.component.html
@@ -45,10 +45,10 @@
     </div>
   </nav>
   <router-outlet></router-outlet>
-  <div class="footer pt-5">
+  <div class="footer pt-5 fixed-bottom">
     <!-- Footer -->
-    <footer class="text-center text-lg-start bg-dark text-light text-muted pt-5">
-      <section class="">
+    <footer class="text-center text-lg-start bg-dark text-light text-muted pt-4">
+      <!-- <section class="">
         <div class="container text-center text-md-start">
           <div class="row text-light text-decoration-none">
             <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
@@ -75,18 +75,33 @@
               <h6 class="text-uppercase fw-bold mb-4">
                 Midtier team
               </h6>
-
+              <p>Akshay V Nayak</p>
+              <p>Aryan Sinha</p>
+              <p>Preethi K S</p>
+              <p>Sai Harsh</p>
+              <p>Vivek R Navale</p>
+              <p>Tharun Bhargav</p>
             </div>
 
             <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
               <h6 class="text-uppercase fw-bold mb-4">Backend Team</h6>
-              <p></p>
+              <p>Anusherishikeshwaran C</p>
+              <p>S K Surya Kumar</p>
+              <p>Joshua Alexaner</p>
+              <p>Karthuck Chandran</p>
+              <p>Saitharun A</p>
+              <p>Ankita Maiti</p>
+              <p>Devina Varshney</p>
+              <p>Adithya Harsh</p>
+              <p>Sneha Tiwari</p>
+              <p>Gayathri Mahendran</p>
+              <p>Shuvam Mitra</p>
+              <p>Akilesh N S</p>
             </div>
           </div>
         </div>
-      </section>
-      <div class="text-center text-light p-4">
-        <hr>
+      </section> -->
+      <div class="text-center text-light pb-4">
         © 2022 Copyright:
         <a class="text-reset text-decoration-none fw-bold" href="#">Fidelity FSE1-FidZulu</a>
       </div>
