--- a/fse1-fidzulu/src/app/main-page/main-page.component.html
+++ b/fse1-fidzulu/src/app/main-page/main-page.component.html
@@ -83,7 +83,7 @@
                   <img src="\assets\images\bike.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Bikes</h5>
-                    <a href="#" class="text-decoration-none">See more...</a>
+                    <a href="" routerLink="/bikes" class="text-decoration-none">See more...</a>
                   </div>
                 </div>
               </div>
@@ -92,7 +92,7 @@
                   <img src="\assets\images\orderfood.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Food</h5>
-                    <a href="#" class="text-decoration-none">See more...</a>
+                    <a href="" routerLink="/foods" class="text-decoration-none">See more...</a>
                   </div>
                 </div>
               </div>
@@ -101,7 +101,7 @@
                   <img src="\assets\images\orderbook.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Books</h5>
-                    <a href="#" class="text-decoration-none">See more...</a>
+                    <a href="" routerLink="/books" class="text-decoration-none">See more...</a>
     
                   </div>
                 </div>
@@ -113,7 +113,7 @@
                   <img src="\assets\images\ordertoy.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Toys</h5>
-                    <a href="#" class="text-decoration-none">See more...</a>
+                    <a href="" routerLink="/toys" class="text-decoration-none">See more...</a>
                   </div>
                 </div>
               </div>
@@ -122,7 +122,7 @@
                   <img src="\assets\images\orderlaptop1.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Laptops</h5>
-                    <a href="#" class="text-decoration-none">See more...</a>
+                    <a href="" routerLink="/laptops" class="text-decoration-none">See more...</a>
                   </div>
                 </div>
               </div>
@@ -131,7 +131,7 @@
                   <img src="\assets\images\orderDvD.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">DVDs</h5>
-                    <a href="#" class="text-decoration-none">See more...</a>
+                    <a href="" routerLink="/dvd" class="text-decoration-none">See more...</a>
                   </div>
                 </div>
               </div>
